Updated all interests on website

--- a/10SecondCity.css
+++ b/10SecondCity.css
@@ -10,3 +10,8 @@
     background-color: rgb(43, 198, 226);
     width: 500px;
 }
+
+.interestButton {
+    width:100px; 
+    background-color: red
+}
